2006-01-13  Peter Dennis Bartok  <pbartok@novell.com>

	* Form.cs: 
	  - Added RecreateHandle call when changing taskbar visibility to 
	    trigger reparenting in Win32 driver (Fixes #75719)
	  - If a window has minimize or maximize buttons, it cannot have
	    a help button
	* XplatUIWin32.cs:
	  - CreateWindow: When no WS_EX_APPWINDOW style is found we parent
	    the toplevel form with FosterParent (A toolwindow not on the
	    taskbar) (Fixes #75719)
	  - Made FosterParent a toolwindow

2006-01-13  Alexander Olk  <alex.olk@googlemail.com>

	* FileDialog.cs: Don't crash if InitialDirectory doesn't exist

2006-01-13  Alexander Olk  <alex.olk@googlemail.com>

	* ToolTip.cs: If SetToolTip is called from a control and the mouse
	  is currently over that control, make sure that tooltip_window.Text
	  gets updated

2006-01-13  Mike Kestner  <mkestner@novell.com>

	* MimeIcon.cs: size_t on lp64 fix for gdk_pixbuf_save_to_file extern.

2006-01-13  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: On MS GetNodeAt never actually factors in the X
	value passed.  Also redraw the selected node when we recieve
	focus, so tabbing between trees works correctly.

2006-01-13  Alexander Olk  <alex.olk@googlemail.com>

	* MimeIcon.cs: GnomeHandler: older gnome versions don't have
	  ~/.gconf/%gconf-tree.xml, so use
	  .gconf/desktop/gnome/interface/%gconf.xml

2006-01-13  Peter Dennis Bartok  <pbartok@novell.com> 

	* TextControl.cs: Draw text in gray if control is disabled

2006-01-13  Peter Dennis Bartok  <pbartok@novell.com> 

	* TreeView.cs: Draw the focus rectangle outside the highlight, to
	  make sure it's always visible. Fixes #76680.

2006-01-13  Peter Dennis Bartok  <pbartok@novell.com>

	* TreeView.cs: Implemented Wheel scrolling. Fixes #76531

2006-01-13  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* PageSetupDialog.cs: Added.
	* PrintDialog.cs: Attributes.
	* PrintPreviewControl.cs: Updates.
	* PrintPreviewDialog.cs: Updates.
	